--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.HomeActivity"
+        <activity
+            android:name=".presentation.HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,12 +17,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.EventsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".presentation.AddEventActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".presentation.EventDetailsActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".presentation.EventsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.AddEventActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.EventDetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".presentation.NewsActivity"></activity>
     </application>
 
 </manifest>
