Implémentation du DBHelper qui s'occupe de créer la base de données + Implémentation de la classe métier Event

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
             android:name=".presentation.EventDetailsActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".presentation.NewsActivity" />
-        <activity android:name=".presentation.EventEditActivity"></activity>
+        <activity android:name=".presentation.EventEditActivity" />
+        <activity android:name=".presentation.ContactEditActivity"></activity>
     </application>
 
 </manifest>
