L'édition des contacts favoris est fonctionelle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ch.hackathon.asdf.seniorapp">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".presentation.HomeActivity"
             android:screenOrientation="portrait">
@@ -28,6 +30,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".presentation.NewsActivity" />
         <activity android:name=".presentation.EventEditActivity" />
+        <activity android:name=".presentation.ContactsActivity" />
         <activity android:name=".presentation.ContactEditActivity"></activity>
     </application>
 
