--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ch.hackathon.asdf.seniorapp">
 
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".presentation.HomeActivity"
             android:screenOrientation="portrait">
@@ -31,8 +31,9 @@
         <activity android:name=".presentation.NewsActivity" />
         <activity android:name=".presentation.EventEditActivity" />
         <activity android:name=".presentation.ContactsActivity" />
-        <activity android:name=".presentation.ListContactsActivity"/>
-        <activity android:name=".presentation.ContactEditActivity"></activity>
+        <activity android:name=".presentation.ListContactsActivity" />
+        <activity android:name=".presentation.ContactEditActivity" />
+        <activity android:name=".presentation.TransporterActivity"></activity>
     </application>
 
 </manifest>
