--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".presentation.EventEditActivity" />
         <activity android:name=".presentation.ContactsActivity" />
         <activity android:name=".presentation.ListContactsActivity"/>
+        <activity android:name=".presentation.TransporterActivity" />
         <activity android:name=".presentation.ContactEditActivity"></activity>
     </application>
 
